<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@color/colorPrimary">

            <ImageSwitcher
                android:id="@+id/toolbar_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_gravity="bottom"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="bottom|center"
                android:paddingBottom="48dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="none">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false">

                    <ImageView
                        android:id="@+id/toolbar_left_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:padding="16dp"
                        android:src="@drawable/ic_chevron_left_white_24dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipChildren="false"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/toolbar_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aban"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/toolbar_sub_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-4dp"
                            android:text="@string/june_july"
                            android:textColor="@android:color/white"
                            android:textSize="13sp"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/toolbar_right_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right|center_vertical"
                        android:padding="16dp"
                        android:src="@drawable/ic_chevron_right_white_24dp"/>

                    <ImageView
                        android:id="@+id/toolbar_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="-48dp"
                        android:padding="16dp"
                        android:src="@drawable/ic_settings_white_24dp"
                        android:visibility="visible"/>
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <com.esbati.keivan.persiancalendar.components.views.CalendarPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:behavior_overlapTop="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.esbati.keivan.persiancalendar.components.views.CalendarBottomSheet
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layoutDirection="ltr"
        app:behavior_peekHeight="48dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_pencil_white_24dp"
        app:backgroundTint="@android:color/holo_blue_light"
        app:fabSize="mini"
        app:layout_anchor="@+id/scroll_view"
        app:layout_anchorGravity="top|left"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>