<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/bottom_sheet_date_container"
                android:orientation="vertical"
                android:gravity="right|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:background="@android:color/holo_blue_dark"
                android:clipToPadding="false">
                <TextView
                    android:id="@+id/date_shamsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/date_miladi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/iran_sans"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_sheet_content_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</merge>