<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:clickable="true"
    android:background="@drawable/bg_calendar_today">
    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:paddingBottom="2dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        app:fontFamily="@font/iran_sans"
        tools:text="Event Title"/>

    <ImageView
        tools:visibility="visible"
        android:id="@+id/event_icon"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_circle_white_24dp"
        android:layout_gravity="left|center_vertical"/>
</FrameLayout>