<resources>
    <string name="app_name">Calendor</string>
    <string name="action_settings">Settings</string>

    <!-- Dialog Messages -->
    <string name="dialog_select_date">انتخاب تاریخ</string>
    <string name="dialog_exit_title">خروج از برنامه</string>
    <string name="dialog_exit_body"> آیا قصد خروج از برنامه را دارید؟ </string>
    <string name="dialog_calendar_rationale_title">دسترسی به تقویم</string>
    <string name="dialog_calendar_rationale_body">برنامه جهت ایجاد و نمایش رویداد ها نیازمند دسترسی به تقویم می باشد.</string>
    <string name="dialog_delete_event_title">حذف رویداد</string>
    <string name="dialog_delete_event_body">آیا از حذف رویداد مورد نظر اطمینان دارید؟ در صورت حذف تمام اطلاعات مربوط به این رویداد حذف می گردد.</string>
    <string name="dialog_button_update">بروزرسانی</string>
    <string name="dialog_button_confirm">تایید</string>
    <string name="dialog_button_return">بازگشت</string>
    <string name="dialog_button_exit">خروج</string>


    <string name="weekday_1">ش</string>
    <string name="weekday_2">ی</string>
    <string name="weekday_3">د</string>
    <string name="weekday_4">س</string>
    <string name="weekday_5">چ</string>
    <string name="weekday_6">پ</string>
    <string name="weekday_7">ج</string>

    <string-array name="weekdays">
        <item>ش</item>
        <item>ی</item>
        <item>د</item>
        <item>س</item>
        <item>چ</item>
        <item>پ</item>
        <item>ج</item>
    </string-array>

    <string name="event_successfully_deleted">رویداد با موفقیت حذف گردید!</string>
    <string name="event_successfully_updated">رویداد با موفقیت به روزرسانی گردید!</string>
    <string name="event_successfully_added">رویداد با موفقیت افزوده شد!</string>
    <string name="event_error_no_calendar">تقویمی جهت درج رویداد موجود نمی باشد.</string>
    <string name="event_error_delete">خطایی در حذف رویداد رخ داده است.</string>
    <string name="event_error_no_content">عنوان یا توضیح رویداد باید تکمیل گردد.</string>
    <string name="event_error_write_permission">جهت افزودن رویداد به تقویم, دسترسی نوشتن تقویم را فعال نمایید.</string>
    <string name="event_no_title">(بدون عنوان)</string>
    <string name="event_no_desc">(فاقد توضیحات)</string>
    <string name="event_days">رویدادهای روز:</string>

    <!-- Notification -->
    <string name="notification_collapsed_text_with_title">%s و %d رویداد دیگر</string>
    <string name="notification_collapsed_text_without_title">%d رویداد</string>
    <string name="notification_action_dismiss_title">Dismiss</string>
    <string name="notification_sticky_channel_name">تقویم</string>
    <string name="notification_sticky_channel_description">تقویم نمایش داده شده در نوار اعلانات</string>

    <string name="notification_broadcast_receiver_description">گیرنده تشخیص تغییر تاریخ جهت به روز رسانی تقویم نوار اعلانات</string>
    <string name="notification_service_description">سرویس به روز نگه دارنده تقویم نوار اعلانات</string>
    <string name="notification_update_service_description">سرویس به روز رسان تقویم نوار اعلانات</string>
    <string name="notification_action_service_description">سرویس انجام دهنده اکشن های تقویم نوار اعلانات</string>
    <string name="showToday">نمایش روز</string>

    <!-- Setting -->
    <string name="setting_animation">انیمیشن</string>
    <string name="setting_animation_selection">انیمیشن انتخاب روز</string>
    <string name="setting_sticky_notification">اعلان ها</string>
    <string name="setting_sticky_notification_display">نمایش تاریخ در نوار اعلانات</string>
    <string name="setting_sticky_notification_actions">نمایش اکشن ها</string>
    <string name="setting_sticky_notification_priority">اولویت نمایش</string>
    <string name="setting_play_note">پخش صدای نوت</string>

    <!-- Priority Titles -->
    <string name="least">کمترین</string>
    <string name="down">پایین</string>
    <string name="priority_default">پیش فرض</string>
    <string name="up">بالا</string>
    <string name="the_most">بیشترین</string>

    <!-- persian month -->
    <string name="farvardin">فروردین</string>
    <string name="ordibehesht">اردیبهشت</string>
    <string name="khordad">خرداد</string>
    <string name="tir">تیر</string>
    <string name="mordad">مرداد</string>
    <string name="shahrivar">شهریور</string>
    <string name="mehr">مهر</string>
    <string name="aban">آبان</string>
    <string name="azar">آذر</string>
    <string name="dey">دی</string>
    <string name="bahman">بهمن</string>
    <string name="esfand">اسفند</string>


    <string name="june_july">June - July</string>
</resources>
